changed graph colors and background in the portfolio section. I also corrected some alignments in about section

--- a/src/components/animation-css/About.css
+++ b/src/components/animation-css/About.css
@@ -1,29 +1,27 @@
 
   
   .charts {
-    /* height: 100%; */
-    
-    /* width: 100%;
-    
+    height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    /* 
     position: relative;
     top: 0;
     left: 0; */
     /* z-index: 10;  */
     /* font-size: 3rem;
-    display: flex;
-    flex-direction: column;
-    justify-content: center; */
-    
-    
+  */
     
     border: solid pink;
   }
   .chart {
-    
-    /* display: flex;
-    
+    display: flex;
     align-items: center;
-    height: 100%; */
+    /* 
+    justify-content: center; */
+    height: 100%;
+    width: 90%;
 
     border: solid purple;
     /* margin: 30px 0 0; */
@@ -54,8 +52,8 @@
     height: 3%;
     padding: 0.3%;
     font-size: 2rem;
-    margin: 4% 0;
-    background: linear-gradient(to left, #4cb8c4, #3cd3ad);
+    margin: 5% 0;
+    background: linear-gradient(to left, #0095ff,#37383a);
     border-top-right-radius: 4px;
     border-bottom-right-radius: 4px;
     opacity: 0;
